hw02-kubernetes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  selector:
    app: demo-web-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: web
  type: ClusterIP
