hw02-kubernetes/k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/avshatokhin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-web-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: demo-web-service
                port:
                  number: 80
